--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 if(UNIX)
-    set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++17 -Wfatal-errors -Werror=return-type -g -O0")
+    set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -std=c++17 -Wfatal-errors -Werror=return-type -g -O0 -no-pie -fno-pie")
 endif()
 
 if(WIN32)
@@ -14,16 +14,8 @@ if (OPENMP_FOUND)
 endif()
 
 find_package(Catch2 REQUIRED)
+
 include_directories(include)
-
-# for Linux, BSD, Solaris, Minix
-if(UNIX AND NOT APPLE)
-    set(CMAKE_CXX_FLAGS "-rdynamic")
-    include_directories("${PROJECT_SOURCE_DIR}/deps/stacktrace")
-    add_library(stacktrace SHARED "${PROJECT_SOURCE_DIR}/deps/stacktrace/stacktrace.cpp")
-    set_property(TARGET stacktrace PROPERTY POSITION_INDEPENDENT_CODE ON)
-endif()
-
 include(CTest)
 include(Catch)
 
@@ -32,10 +24,39 @@ set(MPC_LINK_LIB
     "Catch2::Catch2" 
     ${OpenMP_CXX_LIBRARIES})
 
+if(CMAKE_COMPILER_IS_GNUCXX)
+    include(CodeCoverage)
+    set(CMAKE_BUILD_TYPE Coverage)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage --coverage")
+
+    setup_target_for_coverage(test_lib_dynamic_coverage test_lib_dynamic coverage)
+    setup_target_for_coverage(test_lib_static_coverage test_lib_static coverage)
+    setup_target_for_coverage(test_cases_dynamic_coverage test_cases_dynamic coverage)
+    setup_target_for_coverage(test_cases_static_coverage test_cases_static coverage)
+    setup_target_for_coverage(test_logger_coverage test_logger coverage)
+endif()
+
 set(MPC_TEST_LIB_SOURCES
     "test_constraints.cpp" 
     "test_common.cpp"
     "test_objective.cpp"
+    "test_main.cpp")
+
+set(MPC_TEST_LOGGER_SOURCES
+    "test_logger.cpp" 
+    "test_main.cpp")
+
+set(MPC_TEST_CASES_SOURCES
+    "test_main.cpp" 
+    "test_discrete_lti_siso.cpp"
+    "test_vanderpol.cpp")
+
+set(MPC_TEST_LINEAR_SOURCES
+    "test_lmpc.cpp"
+    "test_main.cpp")
+
+set(MPC_TEST_UTILS_SOURCES
+    "test_utils.cpp"
     "test_main.cpp")
 
 add_executable(test_lib_dynamic ${MPC_TEST_LIB_SOURCES})
@@ -49,19 +70,10 @@ target_link_libraries(test_lib_static ${MPC_LINK_LIB})
 target_compile_definitions(test_lib_static PUBLIC debug)
 catch_discover_tests(test_lib_static)
 
-set(MPC_TEST_LOGGER_SOURCES
-"test_logger.cpp" 
-"test_main.cpp")
-
 add_executable(test_logger ${MPC_TEST_LOGGER_SOURCES})
 target_link_libraries(test_logger ${MPC_LINK_LIB})
 target_compile_definitions(test_logger PUBLIC debug)
 catch_discover_tests(test_logger)
-
-set(MPC_TEST_CASES_SOURCES
-    "test_main.cpp" 
-    "test_discrete_lti_siso.cpp"
-    "test_vanderpol.cpp")
 
 add_executable(test_cases_dynamic ${MPC_TEST_CASES_SOURCES})
 target_link_libraries(test_cases_dynamic ${MPC_LINK_LIB})
@@ -74,16 +86,36 @@ target_link_libraries(test_cases_static ${MPC_LINK_LIB})
 target_compile_definitions(test_cases_static PUBLIC debug)
 catch_discover_tests(test_cases_static)
 
-# for Linux, BSD, Solaris, Minix
-if(UNIX AND NOT APPLE)
-    set(MPC_TEST_UNIX_LINK_LIB
-        "stacktrace" 
-        "bfd" 
-        "iberty")
+add_executable(test_lmpc_static ${MPC_TEST_LINEAR_SOURCES})
+target_link_libraries(test_lmpc_static ${MPC_LINK_LIB})
+target_compile_definitions(test_lmpc_static PUBLIC debug)
+catch_discover_tests(test_lmpc_static)
 
-    target_link_libraries(test_lib_dynamic ${MPC_TEST_UNIX_LINK_LIB})
-    target_link_libraries(test_lib_static ${MPC_TEST_UNIX_LINK_LIB})
-    target_link_libraries(test_cases_dynamic ${MPC_TEST_UNIX_LINK_LIB})
-    target_link_libraries(test_cases_static ${MPC_TEST_UNIX_LINK_LIB})
-    target_link_libraries(test_logger ${MPC_TEST_UNIX_LINK_LIB})
+add_executable(test_lmpc_dynamic ${MPC_TEST_LINEAR_SOURCES})
+target_link_libraries(test_lmpc_dynamic ${MPC_LINK_LIB})
+target_compile_definitions(test_lmpc_dynamic PUBLIC debug)
+target_compile_definitions(test_lmpc_dynamic PUBLIC MPC_DYNAMIC)
+catch_discover_tests(test_lmpc_dynamic)
+
+add_executable(test_utils ${MPC_TEST_UTILS_SOURCES})
+target_link_libraries(test_utils ${MPC_LINK_LIB})
+target_compile_definitions(test_utils PUBLIC debug)
+catch_discover_tests(test_utils)
+
+if(USE_SHOW_STACKTRACE)
+    set(STACKTRACE_LIBS 
+        dl
+        ${Boost_STACKTRACE_BASIC_LIBRARY}
+        ${Boost_STACKTRACE_BACKTRACE_LIBRARY}
+        ${Boost_STACKTRACE_ADDR2LINE_LIBRARY}
+        ${Boost_STACKTRACE_NOOP_LIBRARY})
+
+    target_link_libraries(test_lib_dynamic ${STACKTRACE_LIBS})
+    target_link_libraries(test_lib_static ${STACKTRACE_LIBS})
+    target_link_libraries(test_cases_dynamic ${STACKTRACE_LIBS})
+    target_link_libraries(test_cases_static ${STACKTRACE_LIBS})
+    target_link_libraries(test_logger ${STACKTRACE_LIBS})
+    target_link_libraries(test_lmpc_static ${STACKTRACE_LIBS})
+    target_link_libraries(test_lmpc_dynamic ${STACKTRACE_LIBS})
+    target_link_libraries(test_utils ${STACKTRACE_LIBS})
 endif()
