Update .gitlab-ci.yml, Doxyfile files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,11 @@
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Pages/Doxygen.gitlab-ci.yml
 
 # Full project: https://gitlab.com/pages/doxygen
-image: nakatt/doxygen
+image: tsgkadot/docker-doxygen
 
 pages:
   script:
-    - doxygen
+    - doxygen Doxyfile
     - mv doc/html/ public/
   artifacts:
     paths:
