Output model added to the NLMPC interface, abstract classes refactored

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,5 +79,6 @@
         "qr": "cpp",
         "svd": "cpp",
         "orderingmethods": "cpp"
-    }
+    },
+    "restructuredtext.confPath": "${workspaceFolder}/docs/source"
 }
