--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,7 @@ image: musicscience37/sphinx-doxygen
 
 pages:
   script:
-    - mkdir -p web/doxygen-build
-    - mkdir -p web/sphinx-build
+    - mkdir -p web/doxygen-build web/sphinx-build
     - doxygen Doxyfile
     - pip3 install sphinx breathe sphinx_rtd_theme
     - sphinx-build -b html docs/source/ web/sphinx-build
