Warmstart and profiler (0.4.0)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,7 +91,23 @@
         "__split_buffer": "cpp",
         "queue": "cpp",
         "stack": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "__debug": "cpp",
+        "filesystem": "cpp",
+        "iterativelinearsolvers": "cpp",
+        "matrixfunctions": "cpp",
+        "__bits": "cpp",
+        "__errc": "cpp",
+        "__locale": "cpp",
+        "__mutex_base": "cpp",
+        "__node_handle": "cpp",
+        "__threading_support": "cpp",
+        "__verbose_abort": "cpp",
+        "bit": "cpp",
+        "__nullptr": "cpp",
+        "__string": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp"
     },
     "restructuredtext.confPath": "${workspaceFolder}/docs/source",
     "testMate.cpp.test.executables": "${workspaceFolder}/bin/*"
