--- a/cmake/mpc++Config.cmake.in
+++ b/cmake/mpc++Config.cmake.in
@@ -2,3 +2,6 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/mpc++Targets.cmake")
 check_required_components("@PROJECT_NAME@")
+
+# Set mpc++_INCLUDE_DIRS variable
+set(mpc++_INCLUDE_DIRS "@MPC++_INSTALL_INCLUDE_DIR@")
